--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,6 @@
-2011-05-16
+2011-05-18 Release 0.1.1
+	* -l option added to write log file
+	* minor code refinement
+
+2011-05-16 Release 0.1
 	* first public beta release
