--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-05-20 Release 0.2
+	* nonblock connect implemented
+	* semicolon bind to address not port now
+	* some performance optimization
+	* some bugfix
+
 2011-05-18 Release 0.1.1
 	* -l option added to write log file
 	* minor code refinement
