--- a/TODO
+++ b/TODO
@@ -1,4 +1,10 @@
-fail over
+failover
 tcp pool
 thread
-too many open files
+
+tcproxy "any:11212\
+<-> rr{\
+192.168.0.100:11211 -> 192.168.0.100:11212\
+192.168.0.101:11211\
+192.168.0.102:11211}\
+-> 192.168.0.103:11211"
